# ai-dashboard

./: .env.local  .env.production  .gitignore  package-lock.json  package.json  start-dashboard.bat  tauri-build.yml  vite.config.js
.github/workflows/: tauri-build.yml
src/: App.jsx  boot-error-overlay.js  index.css  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ChallengeModal.jsx  Header.jsx  ProgressMap.jsx  RoadmapNode.jsx  Sidebar.jsx
src/lib/: supabase.js
src/pages/: AccountSync.jsx  Achievements.jsx  Dashboard.jsx  Planner.jsx  Progress.jsx  Roadmap.jsx  Settings.jsx  Tasks.jsx
src/services/: aiClient.js
src/state/: useAppStore.js
